<resources>
    <string name="app_name">WebCurator</string>
    <string name="proceed">Proceed</string>
    <string name="type_url_here">Type url here…</string>
    <string name="next">Next</string>

    <string name="home">Home</string>
    <string name="feeds">Feeds</string>
    <string name="sources">Sources</string>
    <string name="browser">Browser</string>
    <string name="add_button">add button</string>
    <string name="enter_the_title_of_the_feed">Enter the title of the feed</string>
    <string name="site_url">Site URL</string>
    <string name="enter_url_or_a_search_term">Enter URL or a search term…</string>
    <string name="previous">Previous</string>
    <string name="go">Go</string>
    <string name="selection">Selection</string>
    <string name="add">Add</string>
    <string name="feed_description_optional">Feed Description (Optional)</string>
    <string name="enter_a_short_description">Enter a short description</string>
    <string name="finish">Finish</string>
    <string name="https_google_com">https://google.com</string>
    <string name="checked_textview">CheckedTextView</string>
    <string name="https_mubdiur_com">https://mubdiur.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="new_updates_awaiting">new updates awaiting</string>
    <string name="md_mubdiur_rahman">Md. Mubdiur Rahman</string>
    <string name="_13">13</string>
    <string name="_26">26</string>
    <string name="dec">Dec</string>
    <string name="recent_updates">Updates</string>
    <string name="updates_found">updates found</string>
    <string name="textview">TextView</string>
    <string name="url">URL</string>
    <string name="go_button">Go Button</string>
    <string name="add_feed">Add Feed</string>
    <string name="add_to_feed">Add Page to Feed</string>
    <string name="add_site">Add Site</string>
    <string name="edit_feed">Edit Feed</string>
    <string name="notification">Notification</string>
    <string name="delete_feed">Delete Feed</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="log_out">Log out</string>
    <string name="cancel">Cancel</string>
    <string name="turn_on_notification">Turn on Notification</string>
    <string name="logo">Logo</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_password_again">Enter Password Again</string>
    <string name="enter_email">Enter Email</string>
    <string name="email">Email</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="user_registration">User Registration</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_please">Already have an account?</string>
    <string name="login">Login</string>
    <string name="user_login">User Login</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="recover_password">Recover Password</string>
    <string name="email_verification">Email Verification</string>
    <string name="an_email_with_a_confirmation_link_was_sent_to_the_email_address_below_please_check_your_email_and_verify">An email with a confirmation link was sent to the email address below. Please check your email and verify.</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="edit">Edit</string>
    <string name="edit_email">Edit Email</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send_recovery_email">Send Recovery Email</string>
    <string name="a_verification_email_has_been_sent_to_your_email_please_follow_the_instructions_in_email_to_reset_password">A verification email has been sent to your email. Please follow the instructions in email to reset password.</string>
    <string name="go_back_to_login">Go Back to Login</string>
    <string name="re_authentication_required">Re-Authentication Required!</string>
    <string name="password">Password</string>
    <string name="re_authenticate">Re-Authenticate</string>
    <string name="reload">reload</string>
    <string name="loading">Loading…</string>
    <string name="source">Source:</string>
    <string name="title">Title</string>
    <string name="edit_title">Edit Title</string>
    <string name="edit_description">Edit Description</string>
    <string name="description">Description</string>
    <string name="sites">Sites</string>
    <string name="save">Save</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="_9_updates">9 updates</string>
    <string name="total_updates">Total updates:</string>
    <string name="mark_read">Mark Read</string>
    <string name="_0">0</string>
    <string name="name">Name</string>
    <string name="list_empty">List Empty</string>
    <string name="add_feeds_from_top_right_corner">Add feeds from top right corner!</string>
    <string name="no_feeds">No Feeds!</string>
    <string name="no_contents">No Contents!</string>
    <string name="add_valid_sites_from_top_right_corner">Add valid sites from top right corner!</string>
    <string name="no_sites">No Sites!</string>
    <string name="no_updates">No Updates!</string>
    <string name="goto_next_tab_from_bottom_to_add_feeds">Go to next tab from bottom to add feeds!</string>
    <string name="go_back_and_select_a_valid_site">Go back and select a valid site</string>
    <string name="existing_feeds_will_show_up_here">Existing feeds will show up here</string>
</resources>